--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/bottom-tabs": "^7.0.0-alpha.22",
+    "@react-navigation/drawer": "^7.0.0-alpha.21",
+    "@react-navigation/native": "^7.0.0-alpha.18",
+    "@react-navigation/native-stack": "^7.0.0-alpha.20",
     "expo": "~51.0.12",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
