--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/drawer": "^7.0.0-alpha.21",
     "@react-navigation/native": "^7.0.0-alpha.18",
     "@react-navigation/native-stack": "^7.0.0-alpha.20",
-    "expo": "~51.0.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "^51.0.14",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -29,7 +31,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
