--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@hookform/resolvers": "^3.6.0",
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.22",
     "@react-navigation/drawer": "^7.0.0-alpha.21",
@@ -18,6 +19,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "^51.0.14",
+    "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -28,8 +30,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "yup": "^1.4.0",
-    "expo-image-picker": "~15.0.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
