add firebase/auth to project

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@hookform/resolvers": "^3.6.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.22",
     "@react-navigation/drawer": "^7.0.0-alpha.21",
     "@react-navigation/native": "^7.0.0-alpha.18",
@@ -22,6 +23,7 @@
     "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
