--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@expo/react-native-action-sheet": "^4.1.0",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@hookform/resolvers": "^3.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.22",
@@ -28,6 +29,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
